[package]
authors = ["Guillaume Bailleul <laibulle@gmail.com>"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
description = "Rust client for Phoenix channels"
keywords = ["phoenix-channels", "websocket", "phoenix", "channels"]
license = "MIT"
name = "phoenix"
readme = "README.md"
repository = "https://github.com/laibulle/phoenix-rs"
version = "0.2.0"

[badges]

[badges.travis-ci]
repository = "laibulle/phoenix-rs"

[build-dependencies]
protobuf-codegen-pure = "2.0.3"

[dependencies]
env_logger = "0.5.11"
log = "0.4.3"

[dependencies.protobuf]
optional = true
version = "2.0.4"

[dependencies.serde]
optional = true
version = "1.0.70"

[dependencies.serde_derive]
optional = true
version = "1.0.70"

[dependencies.serde_json]
optional = true
version = "1.0.24"

[features]
default = ["json"]
json = ["serde", "serde_json", "serde_derive"]

[lib]
name = "phoenix"
path = "src/lib.rs"

[target]

[target."cfg(not(target_arch = \"wasm32\"))"]

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
websocket = "0.20"
